--- a/tests/EmployeeTracker.IntegrationTests/EmployeeTracker.IntegrationTests.csproj
+++ b/tests/EmployeeTracker.IntegrationTests/EmployeeTracker.IntegrationTests.csproj
@@ -8,10 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNet.Testcontainers" Version="3.9.0" />
-    <PackageReference Include="DotNet.Testcontainers.PostgreSql" Version="3.9.0" />
+  <PackageReference Include="Testcontainers.PostgreSql" Version="4.10.0" />
+
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
-    <PackageReference Include="xunit" Version="2.6.7" />
+<PackageReference Include="xunit" Version="2.7.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.6" />
   </ItemGroup>
 
