--- a/Agent.Service/appsettings.json
+++ b/Agent.Service/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
@@ -10,7 +10,7 @@
     "LogIdleEvents": true,
     "LogAppEvents": true,
     "LogWebEvents": true,
-    "EnableLocalCollectors": false,
+    "EnableLocalCollectors": true,
     "BrowserEventEndpoint": "http://localhost:5002/events",
     "WebEventIngestEndpoint": "http://localhost:5002/events/web/batch",
     "WebSessionIngestEndpoint": "http://localhost:5002/ingest/web-sessions",
